tests/rt/neg/ifc/infoflowcheck01.picox
let fun f ()
      = let val _ = rcv ({}, {secret}, authority, [ hn 1 => () ])
            val _ = printWithLabels "hi"
        in adv (100)
        end

    val p = spawn (f)
    val secret = 42 raisedTo {secret}

    val _ = if secret > 0 then
                            send(p, 1)
                          else ()  (* taints the pc of p *)
 in  ()
 (* send (p, secret) *)
 end
